assets/css/main.css
html {
    height: 100%;
}

body {
    padding-top: 65px;
    background: linear-gradient(#557A95, #7395AE);
    height: 100%;
    margin: 0;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

/* -- NAVBAR START -- */
.navbar {
    background-color: #557A95;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
}

#brand, a.nav-link, .fab {
    color: #def2f1;
    font-weight: bold;
}

#brand:hover, a.nav-link:hover, .fab:hover, .fas:hover {
    color: #5d5c61;
}

.navbar .navbar-toggler {
    border-color: rgb(222, 242, 241);
}

#toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(222, 242, 241, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.navbar-toggler:focus, .navbar-toggler:active {
    outline: none;
    box-shadow: none;
}
/* -- NAVBAR END -- */

/* PER SECTION CSS START */
.jumbotron {
    background-color: rgba(255, 255, 255, 0); 
    color: #def2f1; 
    margin: 50px 0px 50px 0px;
    min-height: 80vh;
}

.section-card {
    background-color: rgba(0, 0, 0, 0);
    border: none;
}

.section-header, .subsection-title {
    text-align: center;
    color: #def2f1;
    font-weight: lighter;
}

.section-header {
    font-size: 48px;
}
.subsection-title {
    font-size: 36px;
}

.arrow-icon {
    text-align: center;
}

.custom-arrow-color, .custom-arrow-color:hover, .custom-arrow-color:focus {
    opacity: 1;
    color: #def2f1;
}

.modal-header {
    background-color: rgba(85, 122, 149, 0.89);
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
    color: #def2f1;
    font-family: sans-serif;
    font-weight: lighter;
    border-bottom: 0 none;
}

.modal-content {
    background: linear-gradient(rgba(85, 122, 149, 0.89), rgba(115, 149, 174, 0.89));
    color: rgb(23, 37, 42);
    text-align: center;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
}

/* PER SECTION CSS END */


/* ----- JUNK START ---- */
.wf {
    outline: 1px solid black;
}

.wtf {
    outline: 3px solid black;
}
/* ----- JUNK END ---- */

/* -- INTRODUCTION START -- */
.intro-row {
    margin-top: 30px;
}

.description-row {
    margin-bottom: 30px;
}

.intro-prefix {
    font-size: calc(0.8vw + 2vh + 1.2vmin);
    font-weight: lighter;
}

.intro-name {
    font-size: calc(8vw + 6vh + 3vmin);
    font-weight: lighter;
}

.intro-description {
    font-size: calc(0.6vw + 0.8vh + 0.6vmin);
    font-weight: 600;
}

/* -- INTRODUCTION END -- */

/* -- ABOUT START -- */
.about-bio {
    max-width: 100%;
    margin: auto;
    color: #def2f1;
    background-color: rgba(0, 0, 0, 0);
    border: none;
}

.about-paragraph {
    margin-top: 10px;
}

/* For safari issues */
.portrait-col {
    align-items: flex-start;
}

.portrait {
    max-width: 300px;
    margin: auto;
    margin-top: 12px;
    margin-bottom: 12px;
    /* box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2); */
}
/* -- ABOUT END -- */

/* -- SKILLS AND TOOLS END -- */
.progress-position {
    width: 80%;
    height: 30px;
    margin-left: 10px;
    background-color: rgb(153, 106, 93) !important;
    font-size: 12px;
    font-weight: bold;
    box-shadow:inset 0 15px 5px -16px #111;
}

.progress-bar-animated {
    background-color: rgb(230, 123, 93) !important;
}

.skill-level-beginner {
    width:33%; 
}

.skill-level-intermediate {
    width:60%; 
}

.skill-level-proficient {
    width:80%; 
}

.skills-row, .tools-row {
    margin-bottom: 30px;
}

.skill-column, .tool-column, nav {
    display: flex;
    align-items: center;
    justify-content: center;
}

.skill-icon, .tool-icon {
    color: rgba(37, 60, 68, 0.63);
}

.skill-icon {
    float: left;
}

.skill-icon, .custom-skill {
    margin-left: 15px; 
    margin-right: 5px;
}

.tool-icon {
    margin-right: 30px;
}

.custom-icon {
    border-radius: 10%; 
    opacity: 0.5;
    height: 32px;
    width: 32px;
}

.custom-tool {
    float: left;
}

.custom-icon:hover, 
.custom-icon:focus, 
.skill-icon:hover, 
.skill-icon:focus,
.tool-icon:focus,
.tool-icon:hover {
    opacity: 1;
    color: rgb(0, 0, 0);;
}
/* -- SKILLS AND TOOLS END -- */



/* -- PROJECTS START -- */
.carousel {
    max-width: 800px;
    margin: auto;
    margin-bottom: 10px;
    border-radius: 1%;
}

.project-image {
    width: 550px;
    margin: auto;
    margin-top: 10px;
    margin-bottom: 10px;
    border-radius: 2%;
    box-shadow:inset 0 15px 5px -16px #111;
}

.carousel-caption {
    background-color: rgba(230, 123, 93, 0.911);
    color: #5d5c61;
    max-width: 400px; 
    margin: auto;
}

.play-link {
    color: #5d5c61;
}

.carousel-prev,
.carousel-next, 
.carousel-prev:focus,
.carousel-next:focus {
    color: #def2f1;
    opacity: .5;
}

.carousel-prev:hover,
.carousel-next:hover {
    color: #def2f1;
    opacity: 1;
}

@media (max-width:990px){
    .carousel-prev,
    .carousel-next, 
    .carousel-prev:focus,
    .carousel-next:focus,
    .carousel-prev:hover,
    .carousel-next:hover {
        color: rgb(230, 123, 93);
        opacity: 1;
    }

}

/* -- PROJECTS END -- */

/* -- CONTACT START -- */
.form-row {
    margin-bottom: 20px;
}

.form-control {
    box-shadow:inset 0 15px 5px -16px #111;
}

.form-control:focus{
    border-color: #cccccc;
    -webkit-box-shadow:inset 0 15px 5px -16px #111;
    box-shadow:inset 0 15px 5px -16px #111;
}

.custom-btn {
    background-color: rgb(230, 123, 93);
}

.custom-btn:hover {
    background-color: rgb(153, 106, 93);
}

/* -- CONTACT END -- */


/* -- FOOTER START -- */
footer {
    background-color: #7395AE;
    box-shadow:inset 0 15px 5px -16px #111;
}

.footer-content {
    color: rgba(23, 37, 42, 0.89);
    background-color: rgba(23, 37, 42, 0);
    border: none;
    font-size: 15px;
    font-weight: lighter;
    margin-top: 10px;
    padding-right: 0px;
}

.rights {
    margin-left: 10px;
}

.modal-btn {
    margin-left: -7px;
}
.modal-btn:focus {
    outline: none;
}

.attribution-links a, .attribution-links{
    color: rgba(23, 37, 42, 0.671);
}

.close:focus {
    border: 0 none;
}

.modal-footer {
    background-color: rgba(115, 149, 174, 0.89);
    box-shadow:inset 0 15px 5px -16px #111;
    border-top: 0 none;
}
/* -- FOOTER END -- */

